# ferry-simulation

./: Makefile  README.md  meson.build  meson_options.txt  run.sh
include/: config.h
include/common/: config.h  ipc.h  logging.h  macros.h  messages.h  state.h
include/processes/: main.h  passenger.h  port_manager.h
src/: main.c  meson.build
src/common/: ipc.c  logging.c  meson.build
src/processes/: ferry_manager.c  main.c  meson.build  passenger.c  port_manager.c
tests/: README.md  TESTS.md  log_parser.py  meson.build  requirements.txt  test_all.sh  test_basic_flow.sh  test_capacity_limits.sh  test_early_departure.sh  test_edge_cases.sh  test_ferry_trips.sh  test_integration.py  test_ipc.c  test_passenger_accounting.sh  test_port_closure.sh  test_ramp.sh  test_security_segregation.sh  test_stress.sh  test_vip_priority.sh  tests.shlib
